src/test/deca/syntax/valid/parser/extension/array_creation_initializer_Ndim.deca
{
    int[][] a = new int a[][] { {1},{1},{1} };
}