src/test/deca/syntax/invalid/parser/extension/TAB_array_access_on_creation.deca
{
    int a = new int[] {0,1,2,3,4}[0];
}